[minisite] llm support